<resources>
    <string name="app_name">Planogram</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="about">
        Planogram by HempyElmo
        Version 0.1.0
    </string>

    <string name="value">Value</string>
    <string name="idNumber">Id Number</string>
    <string name="upc">%1$s</string>
    <string name="setLoc">%1$d/%2$d</string>>
    <string name="format">%1$s</string>
    <string name="nbFacing">%1$d facing</string>
    <string name="shelf">%1$d\"</string>
    <string name="desc">%1$s</string>
    <string name="expiration">Expiration</string>
    <string name="setExpirationTitle">Set expiration</string>
    <string name="expCodeHint">Expiration code</string>
    <string name="btnExpiration">Expiration</string>>
    <string name="setExpiration">%1$d out of %2$d expires on %3$s</string>
    <string name="btnOk">Ok</string>
    <string name="btnCancel">Cancel</string>
    <string name="nb_in_total">Nb in total</string>
    <string name="nb_expiring">Nb expiring</string>
    <string name="month">Month</string>
    <string name="expValidityNotice">Expiration is not valid</string>
    <string name="open_planogram">Open planogram</string>
    <string name="continue_planogram">Continue planogram</string>
    <string name="newProd">New Product</string>>

    <string name="openPlanoMsg">Open planogram</string>
    <string name="progressMsg">Please wait. This could take some time.</string>
    <string name="find">Find</string>

    <!-- Column names in Find activity  -->
    <string name="colPosition">Position</string>
    <string name="colMcKessonId">McKesson Id</string>
    <string name="colUPC">UPC</string>
    <string name="colDescription">Description</string>
</resources>
