<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:weightSum="1"
    android:id="@+id/workView"
    android:visibility="visible"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:baselineAligned="false">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:id="@+id/frameProdDesc">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/desc"
            android:id="@+id/prodDescription"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/format"
            android:id="@+id/prodFormat"
            android:layout_gravity="center_horizontal|bottom"
            android:textColor="@android:color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgCheck"
            android:layout_gravity="bottom|right"
            android:adjustViewBounds="false"
            android:contentDescription="Check"
            android:src="@drawable/ic_check"
            android:maxHeight="60dp"
            android:visibility="visible"
            android:minHeight="40dp"
            android:layout_marginRight="10dp" />

    </FrameLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.10" />

    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="114dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/frameBarcode"
        android:minWidth="200dp"></FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/upc"
        android:id="@+id/UPC"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/nbFacing"
        android:id="@+id/nbFacing"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/black" />

    <Space
        android:layout_width="324dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnExpiration"
        android:id="@+id/btnExpiration"
        android:layout_gravity="center_horizontal"
        android:onClick="setExpiration" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.20"
        android:id="@+id/emptySpace" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newProd"
        android:id="@+id/newProd"
        android:layout_gravity="center_horizontal" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.20" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.17">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/setLoc"
            android:id="@+id/loc"
            android:layout_gravity="center_horizontal|top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/shelfHeight"
            android:id="@+id/shelfHeight"
            android:layout_gravity="center_horizontal|bottom" />

    </FrameLayout>

</LinearLayout>
