<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".setExpirationActivity"
    android:weightSum="1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/setExpirationTitle"
            android:id="@+id/setExpTitle" />
    </FrameLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/expCode"
        android:layout_gravity="center_horizontal"
        android:hint="@string/expCodeHint" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/expValidityNotice"
            android:layout_gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:enabled="false" />
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.90"
        android:weightSum="1">

        <Space
            android:layout_width="20dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.31" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnOk"
            android:id="@+id/btnOk"
            android:layout_gravity="center_vertical"
            android:onClick="pressOkBtn" />

        <Space
            android:layout_width="20dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.21" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:id="@+id/btnCancel"
            android:layout_gravity="center_vertical"
            android:onClick="pressCancelBtn" />
    </LinearLayout>

</LinearLayout>
